--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <button id="btn-next">next</button><br>
   <span id="span-playing"></span>
   <br>
-  <video id="player" controls="true"></video>
+  <video id="player" controls="true" loop="true"></video>
   <script>
    (() => {
     let fileList = [];
