--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
 <body>
-  <input type="file" id="input" multiple><br>
-  <button id="btn-louder">louder</button>
-  <button id="btn-reset-volume">reset</button>
-  <button id="btn-quieter">quieter</button>
+
+<div class="container-fluid p-5">
+<div class="row">
+  <div class="col">
+     <input  class="form-control" type="file" id="input" multiple><br>
+  <button class="btn btn-primary" id="btn-louder">louder</button>
+  <button class="btn btn-primary" id="btn-reset-volume">reset</button>
+  <button class="btn btn-primary" id="btn-quieter">quieter</button>
   <span id="span-volume"></span>
-  <br>
-  <button id="btn-previous">previous</button>
-  <button id="btn-next">next</button><br>
+      </div>
+</div>
+<div class="row">
+  <div class="col">
+  <button class="btn btn-primary" id="btn-previous">previous</button>
+  <button class="btn btn-primary" id="btn-next">next</button><br>
   <span id="span-playing"></span>
-  <br>
-  <video id="player" controls="true" loop="true"></video>
+    </div>
+</div>
+<div class="row">
+  <div class="col">
+  	<video id="player" style="width: 100%" controls="true" loop="true"></video>
+  </div>
+</div>
+
+</div>
   <script>
    (() => {
     let fileList = [];
@@ -147,6 +160,6 @@
   });
   */
   </script>
+  
 </body>
-
 </html>
