--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </div>
 </div>
-<div class="row">
+<div class="row mt-5">
   <div class="col">
     <ul class="list-group" id="cue-sheet-container">
       <!-- <li class="list-group-item">An item</li>
