- update index.html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   </script>
 </head>
 <body>
+<a href="https://github.com/dirkarnez/video-player" target="_blank">dirkarnez/video-player</a><br>
 
 <div class="container-fluid p-5">
   <div class="row">
